# syuntoku14-hugo-source

./: README.md  pyproject.toml
config/_default/: config.yaml  languages.yaml  menus.yaml  params.yaml
content/authors/admin/: _index.md
content/home/: experience.md  other_publications.md  posts.md  projects.md  publications.md  teaching.md
content/post/RL-theory-2023/: index.md
content/post/omron/: index.md
content/project/DVW/: index.md
content/project/EpiRC-PGS/: index.md
content/project/RL-theory-book-translation/: index.md
content/project/UOpt-RPGPD/: index.md
content/project/fusion2urdf/: index.md
content/project/rlil/: index.md
content/project/shinrl/: index.md
content/publication/kitamura-2021-geometric/: index.md
content/publication/kitamura-2021-shinrl/: index.md
content/publication/kitamura-2023-regularization/: index.md
content/publication/kitamura-2024-near/: index.md
content/publication/kitamura-2024-policy/: index.md
content/publication/kitamura-2025-provably/: index.md
content/publication/kitamura-2025-unified/: cite.bib  index.md
content/publication/kozuno-2022-kl/: index.md
content/publication/zhu-2021-cautious/: index.md
content/publication/zhu-2021-cautious-ac/: index.md
content/publication/小津野将-2023-招待講演/: index.md
content/teaching/Deep-RL/: index.md
content/teaching/DeepLearning/: index.md
